TFP-6009 ryddet opp i behandlingdtos, recordifisert fagsakbehandlingdto (#7648)